# HTTP-server

./: Dockerfile  Makefile  main.py  plan.md  pyproject.toml
http-server-python/: READING_GUIDE.md  README.md  plan.md
http-server-python/examples/: api_server.py
http-server-python/src/httpserver/: server.py
http-server-python/src/httpserver/core/: socket_server.py
http-server-python/src/httpserver/handlers/: health.py  static.py
http-server-python/src/httpserver/http/: __init__.py  response.py  router.py  status_codes.py
http-server-python/tests/: conftest.py
http-server-python/tests/unit/: test_response.py  test_router.py
src/httpserver/: __init__.py  __main__.py  config.py
src/httpserver/core/: __init__.py  connection.py  thread_pool.py
src/httpserver/handlers/: __init__.py
src/httpserver/http/: mime_types.py  request.py
src/httpserver/middleware/: __init__.py  base.py  compression.py  cors.py  logging.py  rate_limit.py
tests/unit/: test_request.py
